--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is page of Ivan Krikunov!</h1>
-    <a href="profile.html">Profile</a>
+    <h1>Here will be my profile and skills info</h1>
 </body>
 </html>
